bug 22436 - [ui] rating field cut off in play queue display (r=slloyd)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@19991 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/colors.css
+++ b/feathers/purplerain/chrome/skin/colors.css
@@ -1148,8 +1148,8 @@ treecol {
 }
 
 treecol[bind="http://songbirdnest.com/data/1.0#rating"] {
-  min-width: 78px;
-  width: 78px;
+  min-width: 90px;
+  width: 90px;
 }
 treecol[bind="http://songbirdnest.com/data/1.0#originPageImage"] {
   min-width: 20px;
